avances media queries

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				<p>En nosotros encontrarás ese resplado de calidad, confianza e innovación, te invitamos a agendar una cita con nosotros.</p>
 			</div>
 			<div>
-				<img src="img/index/02.png" alt="">
+				<img src="img/index/02.png" alt="img">
 			</div>
 
 		</section>
