--- a/servicios.html
+++ b/servicios.html
@@ -19,71 +19,153 @@
 
 <body>
     <main>
-        <header>
+        <header class="black">
             <!-- Menú navegación stars -->
-            <nav class="black">
-                <ul>
-                    <a href="index.html"><img src="img/logos/punto_apps.png" alt="logo" /></a>
+            <nav class="container">
+                <a href="index.html"><img src="img/logos/punto_apps.png" alt="logo" /></a>
+                <ul id="menu">
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="servicios.html">Servicios <i class="fa-solid fa-chevron-right fa-2xs"></i></li>
+                    <li><a href="servicios.html">Servicios</i></li>
                     <li><a href="nosotros.html">Nosotros</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="contacto.html">Escríbenos</a></li>
                     <li><a href="https://wa.link/vcthey" target="_blank" rel="noopener noreferrer"><button class="btn-1">¿Tienes un proyecto?</button></a></li>
                 </ul>
+
+                <i class="fa-solid fa-bars fa-xl color__04 bars"></i>
+
+
             </nav>
             <!-- Menú navegación ends -->
         </header>
 
+        <!-- Botón Whastapp starts -->
+        <a class="float" href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-whatsapp fa-beat-fade"></i></a>
+        <!-- Botón Whastapp ends -->
+
+        <div class="container">
+            <div class="services_titles">
+                <p>Servicios de alta calidad </p>
+                <h3>ideales para tu organización</h3>
+            </div>
+            <div class="service__description">
+
+                <div class="service_description-items blue">
+                    <h3>Desarrollo de Aplicaciones</h3>
+                    <p>Desarrollo de productos digitales a tu medida y necesidad</p>
+                    <small>Desde</small>
+                    <h4>3.500 USD</h4>
+                    <small>Por Mes</small>
+                    <ul>
+                        <li>1 Project Manager</li>
+                        <li>1 Diseñador UX/UI</li>
+                        <li>1 Desarrollador Fullstack Jr</li>
+                    </ul>
+                    <button class="btn-2">¡Quiero este servicio!</button>
+                </div>
+
+                <div class="service_description-items blue">
+                    <h3>Desarrollo de Sitios Web</h3>
+                    <p>Desarrollo de productos digitales a tu medida y necesidad</p>
+                    <small>Desde</small>
+                    <h4>2.500 USD</h4>
+                    <small>Por Mes</small>
+                    <ul>
+                        <li>1 Experto en SEO</li>
+                        <li>1 Diseñador UX/UI</li>
+                        <li>1 Desarrollador Fullstack Jr</li>
+                    </ul>
+                    <button class="btn-2">¡Quiero este servicio!</button>
+                </div>
+
+                <div class="service_description-items blue">
+                    <h3>Diseño de Marca</h3>
+                    <p>Desarrollo de productos digitales a tu medida y necesidad</p>
+                    <small>Desde</small>
+                    <h4>1.800 USD</h4>
+                    <small>Por Mes</small>
+                    <ul>
+                        <li>1 Diseñador Gráfico</li>
+                        <li>1 Media Planner</li>
+                        <li>1 Community Manager</li>
+                    </ul>
+                    <button class="btn-2">¡Quiero este servicio!</button>
+                </div>
+
+                <div class="service_description-items blue">
+                    <h3>Marketing Digital</h3>
+                    <p>Desarrollo de productos digitales a tu medida y necesidad</p>
+                    <small>Desde</small>
+                    <h4>2.200 USD</h4>
+                    <small>Por Mes</small>
+                    <ul>
+                        <li>1 TRaficker Digital</li>
+                        <li>1 Diseñador Gráfico</li>
+                        <li>1 Mercadologo </li>
+                    </ul>
+                    <button class="btn-2">¡Quiero este servicio!</button>
+                </div>
+            </div>
+
+        </div>
+
+
+
         <!-- Footer starts -->
         <footer class="black">
-            <div>
-                <ul>
-                    <li><b>Servicios</b> </li>
-                    <br>
-                    <li><a href="">Desarrollo de aplicaciones</a> </li>
-                    <li><a href="">Desarrollo de sitios web</a></li>
-                    <li><a href="">Diseño de marca</a></li>
-                    <li><a href="">Marketing digital</a></li>
-                    <li></li>
-                </ul>
+            <div class="container__footer">
+                <div class="container list">
+                    <ul>
+                        <h4 class="color__03">Servicios</h4>
+                        <br>
+                        <li><a href="servicios.html">Desarrollo de aplicaciones</a> </li>
+                        <li><a href="servicios.html">Desarrollo de sitios web</a></li>
+                        <li><a href="servicios.html">Diseño de marca</a></li>
+                        <li><a href="servicios.html">Marketing digital</a></li>
+                    </ul>
+                </div>
+
+                <div class="container list">
+                    <ul>
+                        <h4 class="color__03">Punto apps </h4>
+                        <br>
+                        <li><a href="nosotros.html">Nosotros</a> </li>
+                        <li><a href="contacto.html">Escríbenos</a></li>
+                        <li><a href="coming_soon.html">Soporte</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                    </ul>
+                </div>
+
+                <div class="container list">
+                    <ul>
+                        <h4 class="color__03">Legal </h4>
+                        <br>
+                        <li><a href="coming_soon.html">Equipo</a> </li>
+                        <li><a href="coming_soon.html">Planes</a></li>
+                        <li><a href="coming_soon.html">Términos y condiciones</a></li>
+                        <li><a href="coming_soon.html">Política de privacidad</a></li>
+                    </ul>
+                </div>
+
+                <div class="social">
+                    <div class="container">
+                        <h5>Síguenos en redes sociales</h5>
+                        <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-tiktok"></i></a>
+                        <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram-square"></i></a>
+                    </div>
+                    <div class="container">
+                        <p>Todos los derechos reservados | Punto Apps 2022™</p>
+                    </div>
+                </div>
             </div>
 
-            <div>
-                <ul>
-                    <li><b>Punto apps</b> </li>
-                    <br>
-                    <li><a href="">Nosotros</a> </li>
-                    <li><a href="">Escríbenos</a></li>
-                    <li><a href="">Soporte</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li></li>
-                </ul>
-            </div>
-
-            <div>
-                <ul>
-                    <li><b>Legal</b> </li>
-                    <br>
-                    <li><a href="">Equipo</a> </li>
-                    <li><a href="">Planes</a></li>
-                    <li><a href="">Términos y condiciones</a></li>
-                    <li><a href="">Política de privacidad</a></li>
-                    <li></li>
-                </ul>
-            </div>
-
-            <div>
-                <h5>Síguenos en redes sociales</h5>
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-brands fa-tiktok"></i>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-instagram-square"></i>
-            </div>
-            <p>Todos los derechos reservados | Punto Apps 2022™</p>
         </footer>
         <!-- Footer ends -->
     </main>
+
+
 </body>
 
 </html>
