se diagrama todo en bootstrap, y realizo primer practica con sass

--- a/servicios.html
+++ b/servicios.html
@@ -1,171 +1,196 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servicios</title>
-    <meta name="description" content="Somos Punto App, alidos en desarrollo de aplicaciones para la transformación digital. ¡Hacemos realidad tus ideas!" />
-    <meta name="keywords" content="Desarrollo de software, desarrollo de apps, desarrollo de aplicacion web, marketing digital, publicidad en google adwords, publicidad en facebook ads, diseño de marca" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Estilos CSS-->
-    <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet" />
-    <!-- Fontawesome íconos -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <script src="main.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
 
 <body>
+
     <main>
-        <header class="black">
-            <!-- Menú navegación stars -->
-            <nav class="container">
-                <a href="index.html"><img src="img/logos/punto_apps.png" alt="logo" /></a>
-                <ul id="menu">
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="servicios.html">Servicios</i></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contacto.html">Escríbenos</a></li>
-                    <li><a href="https://wa.link/vcthey" target="_blank" rel="noopener noreferrer"><button class="btn-1">¿Tienes un proyecto?</button></a></li>
-                </ul>
+        <section class="bg-dark">
+            <div class="container">
+                <nav class="navbar sticky-top navbar-expand-lg bg-dark ">
+                    <div class="d-flex">
+                        <a class="navbar-brand" href="index.html"><img src="img/logos/punto_apps.png" alt=""></a>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0 gap-5">
+                                <li class=" nav-item">
+                                    <a class="nav-link active text-light" aria-current="page" href="index.html">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" aria-current="page" href="servicios.html">Servicios</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" aria-current="page" href="nosotros.html">Nosotros</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" aria-current="page" href="blog.html">Blog</a>
+                                </li>
 
-                <i class="fa-solid fa-bars fa-xl color__04 bars"></i>
-
-
-            </nav>
-            <!-- Menú navegación ends -->
-        </header>
-
-        <!-- Botón Whastapp starts -->
-        <a class="float" href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-whatsapp fa-beat-fade"></i></a>
-        <!-- Botón Whastapp ends -->
-
-        <div class="container">
-            <div class="services_titles">
-                <p>Servicios de alta calidad </p>
-                <h3>ideales para tu organización</h3>
-            </div>
-            <div class="service__description">
-
-                <div class="service_description-items blue">
-                    <h3>Desarrollo de Aplicaciones</h3>
-                    <p>Desarrollo de productos digitales a tu medida y necesidad</p>
-                    <small>Desde</small>
-                    <h4>3.500 USD</h4>
-                    <small>Por Mes</small>
-                    <ul>
-                        <li>1 Project Manager</li>
-                        <li>1 Diseñador UX/UI</li>
-                        <li>1 Desarrollador Fullstack Jr</li>
-                    </ul>
-                    <button class="btn-2">¡Quiero este servicio!</button>
-                </div>
-
-                <div class="service_description-items blue">
-                    <h3>Desarrollo de Sitios Web</h3>
-                    <p>Desarrollo de productos digitales a tu medida y necesidad</p>
-                    <small>Desde</small>
-                    <h4>2.500 USD</h4>
-                    <small>Por Mes</small>
-                    <ul>
-                        <li>1 Experto en SEO</li>
-                        <li>1 Diseñador UX/UI</li>
-                        <li>1 Desarrollador Fullstack Jr</li>
-                    </ul>
-                    <button class="btn-2">¡Quiero este servicio!</button>
-                </div>
-
-                <div class="service_description-items blue">
-                    <h3>Diseño de Marca</h3>
-                    <p>Desarrollo de productos digitales a tu medida y necesidad</p>
-                    <small>Desde</small>
-                    <h4>1.800 USD</h4>
-                    <small>Por Mes</small>
-                    <ul>
-                        <li>1 Diseñador Gráfico</li>
-                        <li>1 Media Planner</li>
-                        <li>1 Community Manager</li>
-                    </ul>
-                    <button class="btn-2">¡Quiero este servicio!</button>
-                </div>
-
-                <div class="service_description-items blue">
-                    <h3>Marketing Digital</h3>
-                    <p>Desarrollo de productos digitales a tu medida y necesidad</p>
-                    <small>Desde</small>
-                    <h4>2.200 USD</h4>
-                    <small>Por Mes</small>
-                    <ul>
-                        <li>1 TRaficker Digital</li>
-                        <li>1 Diseñador Gráfico</li>
-                        <li>1 Mercadologo </li>
-                    </ul>
-                    <button class="btn-2">¡Quiero este servicio!</button>
-                </div>
-            </div>
-
-        </div>
-
-
-
-        <!-- Footer starts -->
-        <footer class="black">
-            <div class="container__footer">
-                <div class="container list">
-                    <ul>
-                        <h4 class="color__03">Servicios</h4>
-                        <br>
-                        <li><a href="servicios.html">Desarrollo de aplicaciones</a> </li>
-                        <li><a href="servicios.html">Desarrollo de sitios web</a></li>
-                        <li><a href="servicios.html">Diseño de marca</a></li>
-                        <li><a href="servicios.html">Marketing digital</a></li>
-                    </ul>
-                </div>
-
-                <div class="container list">
-                    <ul>
-                        <h4 class="color__03">Punto apps </h4>
-                        <br>
-                        <li><a href="nosotros.html">Nosotros</a> </li>
-                        <li><a href="contacto.html">Escríbenos</a></li>
-                        <li><a href="coming_soon.html">Soporte</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                    </ul>
-                </div>
-
-                <div class="container list">
-                    <ul>
-                        <h4 class="color__03">Legal </h4>
-                        <br>
-                        <li><a href="coming_soon.html">Equipo</a> </li>
-                        <li><a href="coming_soon.html">Planes</a></li>
-                        <li><a href="coming_soon.html">Términos y condiciones</a></li>
-                        <li><a href="coming_soon.html">Política de privacidad</a></li>
-                    </ul>
-                </div>
-
-                <div class="social">
-                    <div class="container">
-                        <h5>Síguenos en redes sociales</h5>
-                        <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-tiktok"></i></a>
-                        <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram-square"></i></a>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" aria-current="page" href="contacto.html">Escríbenos</a>
+                                </li>
+                                <a href=""><button type="button" class="btn btn-primary">¿Tienes un proyecto?</button> </a>>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="container">
-                        <p>Todos los derechos reservados | Punto Apps 2022™</p>
+                </nav>
+            </div>
+        </section>
+
+        <section class="my-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 col-md-6 ">
+                        <div class="card border-primary mb-3 " style="max-width: 18rem;">
+                            <div class="card-body text-primary">
+                                <h5 class="card-title">Desarrollo de Aplicaciones</h5>
+                                <p class="card-text">Desarrollo de productos digitales a tu medida y necesidad</p>
+                                <p><small>desde</small></p>
+                                <h3>3.500 USD</h3>
+                                <p><small>por mes</small></p>
+                                <ul>
+                                    <li>1 Project Manager</li>
+                                    <li>1 Diseñador UX/UI</li>
+                                    <li>1 Desarrollador Fullstack Jr</li>
+                                </ul>
+                                <a href=""><button type="button" class="btn btn-primary">¡Quiero este Servicio!</button> </a>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-12 col-md-6">
+                        <div class="card border-primary mb-3" style="max-width: 18rem;">
+                            <div class="card-body text-primary">
+                                <h5 class="card-title">Desarrollo de Aplicaciones</h5>
+                                <p class="card-text">Desarrollo de productos digitales a tu medida y necesidad</p>
+                                <p><small>desde</small></p>
+                                <h3>3.500 USD</h3>
+                                <p><small>por mes</small></p>
+                                <ul>
+                                    <li>1 Project Manager</li>
+                                    <li>1 Diseñador UX/UI</li>
+                                    <li>1 Desarrollador Fullstack Jr</li>
+                                </ul>
+                                <a href=""><button type="button" class="btn btn-primary">¡Quiero este Servicio!</button> </a>
+
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-        </footer>
-        <!-- Footer ends -->
+
+                <div class="row">
+                    <div class="col-sm-12 col-md-6">
+                        <div class="card border-primary mb-3" style="max-width: 18rem;">
+                            <div class="card-body text-primary">
+                                <h5 class="card-title">Desarrollo de Aplicaciones</h5>
+                                <p class="card-text">Desarrollo de productos digitales a tu medida y necesidad</p>
+                                <p><small>desde</small></p>
+                                <h3>3.500 USD</h3>
+                                <p><small>por mes</small></p>
+                                <ul>
+                                    <li>1 Project Manager</li>
+                                    <li>1 Diseñador UX/UI</li>
+                                    <li>1 Desarrollador Fullstack Jr</li>
+                                </ul>
+                                <a href=""><button type="button" class="btn btn-primary">¡Quiero este Servicio!</button> </a>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-sm-12 col-md-6">
+                        <div class="card border-primary mb-3" style="max-width: 18rem;">
+                            <div class="card-body text-primary">
+                                <h5 class="card-title">Desarrollo de Aplicaciones</h5>
+                                <p class="card-text">Desarrollo de productos digitales a tu medida y necesidad</p>
+                                <p><small>desde</small></p>
+                                <h3>3.500 USD</h3>
+                                <p><small>por mes</small></p>
+                                <ul>
+                                    <li>1 Project Manager</li>
+                                    <li>1 Diseñador UX/UI</li>
+                                    <li>1 Desarrollador Fullstack Jr</li>
+                                </ul>
+                                <a href=""><button type="button" class="btn btn-primary">¡Quiero este Servicio!</button> </a>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+        </section>
+
+
     </main>
 
+    <section class="bg-dark">
+        <div class="container">
+            <!-- Footer -->
+            <footer class="text-center text-lg-start text-muted pt-3">
+                <section class="">
+                    <div class="container text-center text-md-start mt-5">
+                        <div class="row mt-3">
+                            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                                <ul>
+                                    <h4 class="color__03">Servicios</h4>
+                                    <br>
+                                    <li><a href="servicios.html">Desarrollo de aplicaciones</a> </li>
+                                    <li><a href="servicios.html">Desarrollo de sitios web</a></li>
+                                    <li><a href="servicios.html">Diseño de marca</a></li>
+                                    <li><a href="servicios.html">Marketing digital</a></li>
+                                </ul>
+                            </div>
 
+                            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                                <ul>
+                                    <h4 class="color__03">Punto apps </h4>
+                                    <br>
+                                    <li><a href="nosotros.html">Nosotros</a> </li>
+                                    <li><a href="contacto.html">Escríbenos</a></li>
+                                    <li><a href="coming_soon.html">Soporte</a></li>
+                                    <li><a href="blog.html">Blog</a></li>
+                                </ul>
+                            </div>
+
+                            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                                <ul>
+                                    <h4 class="color__03">Legal </h4>
+                                    <br>
+                                    <li><a href="coming_soon.html">Equipo</a> </li>
+                                    <li><a href="coming_soon.html">Planes</a></li>
+                                    <li><a href="coming_soon.html">Términos y condiciones</a></li>
+                                    <li><a href="coming_soon.html">Política de privacidad</a></li>
+                                </ul>
+                            </div>
+
+                            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                                <h5>Síguenos en redes sociales</h5>
+                                <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
+                                <a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-tiktok"></i></a>
+                                <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
+                                <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram-square"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+
+            </footer>
+        </div>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 
 </html>
