--- a/index.html
+++ b/index.html
@@ -1,191 +1,204 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Punto Apps</title>
-	<meta name="description" content="Somos Punto App, alidos en desarrollo de aplicaciones para la transformación digital. ¡Hacemos realidad tus ideas!" />
-	<meta name="keywords" content="Desarrollo de software, desarrollo de apps, desarrollo de aplicacion web, marketing digital, publicidad en google adwords, publicidad en facebook ads, diseño de marca" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<!-- Estilos CSS-->
-	<link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
-	<!-- Fonts -->
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet" />
-	<!-- Fontawesome íconos -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-	<script src="main.js"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
 
 <body>
+
 	<main>
-		<div class="grid-body">
-			<header class="black">
-				<!-- Menú navegación stars -->
-				<nav class="container">
-					<a href="index.html"><img src="img/logos/punto_apps.png" alt="logo" /></a>
-					<ul id="menu">
-						<li><a href="index.html">Inicio</a></li>
-						<li><a href="servicios.html">Servicios</i></li>
-						<li><a href="nosotros.html">Nosotros</a></li>
-						<li><a href="blog.html">Blog</a></li>
-						<li><a href="contacto.html">Escríbenos</a></li>
-						<li><a href="https://wa.link/vcthey" target="_blank" rel="noopener noreferrer"><button class="btn-1">¿Tienes un proyecto?</button></a></li>
-					</ul>
+		<section class="bg-dark">
+			<div class="container">
+				<nav class="navbar sticky-top navbar-expand-lg bg-dark ">
+					<div class="d-flex">
+						<a class="navbar-brand" href="index.html"><img src="img/logos/punto_apps.png" alt=""></a>
+						<div class="collapse navbar-collapse" id="navbarSupportedContent">
+							<ul class="navbar-nav me-auto mb-2 mb-lg-0 gap-5">
+								<li class=" nav-item">
+									<a class="nav-link active text-light" aria-current="page" href="index.html">Inicio</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link text-light" aria-current="page" href="servicios.html">Servicios</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link text-light" aria-current="page" href="nosotros.html">Nosotros</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link text-light" aria-current="page" href="blog.html">Blog</a>
+								</li>
 
-					<i class="fa-solid fa-bars fa-xl color__04 bars"></i>
-
-
+								<li class="nav-item">
+									<a class="nav-link text-light" aria-current="page" href="contacto.html">Escríbenos</a>
+								</li>
+								<a href=""><button type="button" class="btn btn-primary">¿Tienes un proyecto?</button> </a>>
+							</ul>
+						</div>
+					</div>
 				</nav>
-				<!-- Menú navegación ends -->
-			</header>
+			</div>
+		</section>
 
-			<!-- Botón Whastapp starts -->
-			<a class="float" href="https://web.whatsapp.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-whatsapp fa-beat-fade"></i></a>
-			<!-- Botón Whastapp ends -->
+		<section>
+			<div class="container">
+				<div class="row d-flex align-items-center">
+					<div class="col-sm-12 col-md-6">
+						<h1>Somos Punto App</h1>
+						<h3>Hacemos Realidad tus ideas</h3>
+						<button type="button" class="btn btn-primary">¿Tienes un proyecto?</button>
+					</div>
 
-			<!-- Banner starts -->
-			<section class="hero container">
-				<div class="hero__title">
-					<h1>Somos <span class="color__01">Punto App</span> </h1>
-					<h2>Hacemos realidad tus ideas</h2>
-					<a href=""><button class="btn-2"><i class="fa-solid fa-arrow-right-long"></i> Empieza ahora </button></a>
+					<div class="col-sm-12 col-md-6">
+						<img src="img/index/01.png" alt="">
+					</div>
 				</div>
+			</div>
+		</section>
+
+		<section class="my-5">
+			<div class="container">
+				<div class="col-12">
+					<h4>Somos tu mejor aliado en innovación y tecnología</h4>
+				</div>
+				<div class="d-flex flex-row gap-4">
+					<div class="col-sm-12 col-md-4 card p-3">
+						<i class="fa-solid fa-lightbulb"></i>
+						<h5>Innovación</h5>
+						<p>Generamos soluciones innovadoras para dar vida a tus ideas.</p>
+					</div>
+					<div class="col-sm-12 col-md-4 card p-3">
+						<i class="fa-solid fa-lightbulb"></i>
+						<h5>Calidad</h5>
+						<p>Nuestros desarrollos tienen como eje central la calidad y la satisfaccíon.</p>
+					</div>
+					<div class="col-sm-12 col-md-4 card p-3">
+						<i class="fa-solid fa-lightbulb"></i>
+						<h5>Experiencia</h5>
+						<p>Contamos con un equipo altamente capacitado en tecnologías de vanguardia</p>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="my-5">
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="col-sm-12 col-md-6">
+						<h4>Somos Punto App</h4>
+						<p>Nos especializamos en construir sueños, ideas y llevarlas al punto ideal del éxito organziacional. Con más de 10 años de experiencia en el mercado, y con un equipo de excelentes profesionales, somos tu aliado ideal para desarrollo de software e innovación.
+							En nosotros encontrarás ese resplado de calidad, confianza e innovación, te invitamos a agendar una cita con nosotros.</p>
+					</div>
+
+					<div class="col-sm-12 col-md-6">
+						<img src="img/index/02.png" alt="">
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="my-5">
+			<div class="container">
 				<div>
-					<img class="hero__img" src="img/index/01.png" alt="hombre desarrolador de software sentado y sonriendo">
-				</div>
-			</section>
-			<!-- Banner ends -->
-
-
-			<!-- Items starts -->
-			<section class="container cards_section">
-				<div>
-					<h3 class="color__01">Somos tu mejor aliado en innovación y tecnología</h3>
-				</div>
-				<div class="cards">
-					<div class="cards__item">
-						<i class="cards__icon fa-solid fa-lightbulb fa-2xl"></i>
-						<h4 class="cards__title">Innovación</h4>
-						<p class="cards__text">Generamos soluciones innovadoras para dar vida a tus ideas.</p>
-					</div>
-					<div class="cards__item">
-						<i class="fa-solid fa-circle-check fa-2xl"></i>
-						<h4 class="cards__title">Calidad</h4>
-						<p class="cards__text">Nuestros desarrollos tienen como eje central la calidad y la satisfaccíon.</p>
-					</div>
-					<div class="cards__item">
-						<i class="fa-solid fa-ranking-star fa-2xl"></i>
-						<h4 class="cards__title">Experiencia</h4>
-						<p class="cards__text">Contamos con un equipo altamente capacitado en tecnologías de vanguardia</p>
-					</div>
-				</div>
-			</section>
-			<!-- Items ends -->
-
-			<!-- Sobre nosotros starts -->
-			<section class="container about">
-				<div>
-					<h3>Somos Punto apps</h3>
-					<p>Nos especializamos en construir sueños, ideas y llevarlas al punto ideal del éxito organziacional. Con más de 10 años de experiencia en el mercado, y con un equipo de excelentes profesionales, somos tu aliado ideal para desarrollo de software e innovación.</p>
-					<br>
-					<p>En nosotros encontrarás ese resplado de calidad, confianza e innovación, te invitamos a agendar una cita con nosotros.</p>
-				</div>
-				<div>
-					<img src="img/index/02.png" alt="img">
+					<h5>Descubre algunos de</h5>
+					<h3>Nuestros Servicios</h3>
 				</div>
 
-			</section>
-			<!-- Sobre nosotros ends -->
 
-
-
-			<!-- servicios starts -->
-			<section class="container services">
-				<div class="services_title">
-					<p>Descubre algunos de </p>
-					<h3>nuestros servicios</h3>
-				</div>
-
-				<div class="services__items">
-					<div class="services__cards">
-						<img class="services__card-img" src="img/index/services_01.png" alt="">
-						<h4 class="service__name">Desarrollo de aplicaciones</h4>
-					</div>
-					<div class="services__cards">
-						<img class="services__card-img" src="img/index/services_02.png" alt="">
-						<h4 class="service__name">Desarrollo de sitios web</h4>
-					</div>
-					<div class="services__cards">
-						<img class="services__card-img" src="img/index/services_03.png" alt="">
-						<h4 class="service__name">Diseño de marca</h4>
-					</div>
-					<div class="services__cards">
-						<img class="services__card-img" src="img/index/services_04.png" alt="">
-						<h4 class="service__name">Marketing digital</h4>
-					</div>
-				</div>
-			</section>
-			<!-- servicios ends -->
-
-
-
-			<!-- Footer starts -->
-			<footer class="black">
-				<div class="container__footer">
-					<div class="container list">
-						<ul>
-							<h4 class="color__03">Servicios</h4>
-							<br>
-							<li><a href="servicios.html">Desarrollo de aplicaciones</a> </li>
-							<li><a href="servicios.html">Desarrollo de sitios web</a></li>
-							<li><a href="servicios.html">Diseño de marca</a></li>
-							<li><a href="servicios.html">Marketing digital</a></li>
-						</ul>
-					</div>
-
-					<div class="container list">
-						<ul>
-							<h4 class="color__03">Punto apps </h4>
-							<br>
-							<li><a href="nosotros.html">Nosotros</a> </li>
-							<li><a href="contacto.html">Escríbenos</a></li>
-							<li><a href="coming_soon.html">Soporte</a></li>
-							<li><a href="blog.html">Blog</a></li>
-						</ul>
-					</div>
-
-					<div class="container list">
-						<ul>
-							<h4 class="color__03">Legal </h4>
-							<br>
-							<li><a href="coming_soon.html">Equipo</a> </li>
-							<li><a href="coming_soon.html">Planes</a></li>
-							<li><a href="coming_soon.html">Términos y condiciones</a></li>
-							<li><a href="coming_soon.html">Política de privacidad</a></li>
-						</ul>
-					</div>
-
-					<div class="social">
-						<div class="container">
-							<h5>Síguenos en redes sociales</h5>
-							<a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
-							<a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-tiktok"></i></a>
-							<a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
-							<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram-square"></i></a>
+				<div class="d-flex gap-4">
+					<div class="card" style="width: 18rem;">
+						<img src="img/index/services_01.png" class="card-img-top" alt="...">
+						<div class="card-body">
+							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 						</div>
-						<div class="container">
-							<p>Todos los derechos reservados | Punto Apps 2022™</p>
+					</div>
+
+					<div class="card" style="width: 18rem;">
+						<img src="img/index/services_02.png" class="card-img-top" alt="...">
+						<div class="card-body">
+							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						</div>
+					</div>
+
+					<div class="card" style="width: 18rem;">
+						<img src="img/index/services_03.png" class="card-img-top" alt="...">
+						<div class="card-body">
+							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						</div>
+					</div>
+
+					<div class="card" style="width: 18rem;">
+						<img src="img/index/services_04.png" class="card-img-top" alt="...">
+						<div class="card-body">
+							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 						</div>
 					</div>
 				</div>
-
-			</footer>
-			<!-- Footer ends -->
-		</div>
+			</div>
+		</section>
 	</main>
 
+	<section class="bg-dark">
+		<div class="container">
+			<!-- Footer -->
+			<footer class="text-center text-lg-start text-muted pt-3">
+				<section class="">
+					<div class="container text-center text-md-start mt-5">
+						<div class="row mt-3">
+							<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+								<ul>
+									<h4 class="color__03">Servicios</h4>
+									<br>
+									<li><a href="servicios.html">Desarrollo de aplicaciones</a> </li>
+									<li><a href="servicios.html">Desarrollo de sitios web</a></li>
+									<li><a href="servicios.html">Diseño de marca</a></li>
+									<li><a href="servicios.html">Marketing digital</a></li>
+								</ul>
+							</div>
 
+							<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+								<ul>
+									<h4 class="color__03">Punto apps </h4>
+									<br>
+									<li><a href="nosotros.html">Nosotros</a> </li>
+									<li><a href="contacto.html">Escríbenos</a></li>
+									<li><a href="coming_soon.html">Soporte</a></li>
+									<li><a href="blog.html">Blog</a></li>
+								</ul>
+							</div>
+
+							<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+								<ul>
+									<h4 class="color__03">Legal </h4>
+									<br>
+									<li><a href="coming_soon.html">Equipo</a> </li>
+									<li><a href="coming_soon.html">Planes</a></li>
+									<li><a href="coming_soon.html">Términos y condiciones</a></li>
+									<li><a href="coming_soon.html">Política de privacidad</a></li>
+								</ul>
+							</div>
+
+							<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+								<h5>Síguenos en redes sociales</h5>
+								<a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
+								<a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-tiktok"></i></a>
+								<a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
+								<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram-square"></i></a>
+							</div>
+						</div>
+					</div>
+				</section>
+
+
+			</footer>
+		</div>
+	</section>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 
 </html>
