--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet" />
 	<!-- Fontawesome íconos -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<script src="main.js"></script>
 </head>
 
@@ -33,7 +34,6 @@
 						<li><a href="https://wa.link/vcthey" target="_blank" rel="noopener noreferrer"><button class="btn-1">¿Tienes un proyecto?</button></a></li>
 					</ul>
 
-					<i class="fa-solid fa-bars fa-xl color__04 bars"></i>
 
 
 				</nav>
@@ -45,7 +45,7 @@
 			<!-- Botón Whastapp ends -->
 
 			<!-- Banner starts -->
-			<section class="hero container">
+			<section class="hero container animate__animated animate__fadeInLeft animate__slow">
 				<div class="hero__title">
 					<h1>Somos <span class="color__01">Punto App</span> </h1>
 					<h2>Hacemos realidad tus ideas</h2>
@@ -59,7 +59,7 @@
 
 
 			<!-- Items starts -->
-			<section class="container cards_section">
+			<section class="container cards_section animate__animated animate__fadeInUp animate__slow">
 				<div>
 					<h3 class="color__01">Somos tu mejor aliado en innovación y tecnología</h3>
 				</div>
@@ -84,7 +84,7 @@
 			<!-- Items ends -->
 
 			<!-- Sobre nosotros starts -->
-			<section class="container about">
+			<section class="container about animate__animated animate__fadeInDown animate__slow">
 				<div>
 					<h3>Somos Punto apps</h3>
 					<p>Nos especializamos en construir sueños, ideas y llevarlas al punto ideal del éxito organziacional. Con más de 10 años de experiencia en el mercado, y con un equipo de excelentes profesionales, somos tu aliado ideal para desarrollo de software e innovación.</p>
@@ -101,7 +101,7 @@
 
 
 			<!-- servicios starts -->
-			<section class="container services">
+			<section class="container services animate__animated animate__fadeInLeft animate__slow">
 				<div class="services_title">
 					<p>Descubre algunos de </p>
 					<h3>nuestros servicios</h3>
@@ -130,60 +130,62 @@
 
 
 
-			<!-- Footer starts -->
-			<footer class="black">
-				<div class="container__footer">
-					<div class="container list">
-						<ul>
-							<h4 class="color__03">Servicios</h4>
-							<br>
-							<li><a href="servicios.html">Desarrollo de aplicaciones</a> </li>
-							<li><a href="servicios.html">Desarrollo de sitios web</a></li>
-							<li><a href="servicios.html">Diseño de marca</a></li>
-							<li><a href="servicios.html">Marketing digital</a></li>
-						</ul>
-					</div>
 
-					<div class="container list">
-						<ul>
-							<h4 class="color__03">Punto apps </h4>
-							<br>
-							<li><a href="nosotros.html">Nosotros</a> </li>
-							<li><a href="contacto.html">Escríbenos</a></li>
-							<li><a href="coming_soon.html">Soporte</a></li>
-							<li><a href="blog.html">Blog</a></li>
-						</ul>
-					</div>
-
-					<div class="container list">
-						<ul>
-							<h4 class="color__03">Legal </h4>
-							<br>
-							<li><a href="coming_soon.html">Equipo</a> </li>
-							<li><a href="coming_soon.html">Planes</a></li>
-							<li><a href="coming_soon.html">Términos y condiciones</a></li>
-							<li><a href="coming_soon.html">Política de privacidad</a></li>
-						</ul>
-					</div>
-
-					<div class="social">
-						<div class="container">
-							<h5>Síguenos en redes sociales</h5>
-							<a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
-							<a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-tiktok"></i></a>
-							<a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
-							<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram-square"></i></a>
-						</div>
-						<div class="container">
-							<p>Todos los derechos reservados | Punto Apps 2022™</p>
-						</div>
-					</div>
-				</div>
-
-			</footer>
-			<!-- Footer ends -->
 		</div>
 	</main>
+
+	<!-- Footer starts -->
+	<footer class="black">
+		<div class="container__footer">
+			<div class="container list">
+				<ul>
+					<h4 class="color__03">Servicios</h4>
+					<br>
+					<li><a href="servicios.html">Desarrollo de aplicaciones</a> </li>
+					<li><a href="servicios.html">Desarrollo de sitios web</a></li>
+					<li><a href="servicios.html">Diseño de marca</a></li>
+					<li><a href="servicios.html">Marketing digital</a></li>
+				</ul>
+			</div>
+
+			<div class="container list">
+				<ul>
+					<h4 class="color__03">Punto apps </h4>
+					<br>
+					<li><a href="nosotros.html">Nosotros</a> </li>
+					<li><a href="contacto.html">Escríbenos</a></li>
+					<li><a href="coming_soon.html">Soporte</a></li>
+					<li><a href="blog.html">Blog</a></li>
+				</ul>
+			</div>
+
+			<div class="container list">
+				<ul>
+					<h4 class="color__03">Legal </h4>
+					<br>
+					<li><a href="coming_soon.html">Equipo</a> </li>
+					<li><a href="coming_soon.html">Planes</a></li>
+					<li><a href="coming_soon.html">Términos y condiciones</a></li>
+					<li><a href="coming_soon.html">Política de privacidad</a></li>
+				</ul>
+			</div>
+
+			<div class="social">
+				<div class="container">
+					<h5>Síguenos en redes sociales</h5>
+					<a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
+					<a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-tiktok"></i></a>
+					<a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
+					<a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram-square"></i></a>
+				</div>
+				<div class="container">
+					<p>Todos los derechos reservados | Punto Apps 2022™</p>
+				</div>
+			</div>
+		</div>
+
+	</footer>
+	<!-- Footer ends -->
 
 
 </body>
