--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet" />
     <!-- Fontawesome íconos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <script src="main.js"></script>
 </head>
 
@@ -33,7 +33,6 @@
                     <li><a href="https://wa.link/vcthey" target="_blank" rel="noopener noreferrer"><button class="btn-1">¿Tienes un proyecto?</button></a></li>
                 </ul>
 
-                <i class="fa-solid fa-bars fa-xl color__04 bars"></i>
 
 
             </nav>
@@ -46,7 +45,7 @@
 
         <div class="container">
 
-            <div class="article_cards">
+            <div class="article_cards animate__animated animate__fadeInUp animate__slow">
 
                 <div class="article_item">
                     <img src="https://picsum.photos/300/300?random=1" alt="">
@@ -72,7 +71,7 @@
 
             </div>
 
-            <div class="article_cards">
+            <div class="article_cards animate__animated animate__fadeInUp animate__slow">
 
                 <div class="article_item">
                     <img src="https://picsum.photos/300/300?random=1" alt="">
@@ -105,60 +104,62 @@
 
 
 
-        <!-- Footer starts -->
-        <footer class="black">
-            <div class="container__footer">
-                <div class="container list">
-                    <ul>
-                        <h4 class="color__03">Servicios</h4>
-                        <br>
-                        <li><a href="servicios.html">Desarrollo de aplicaciones</a> </li>
-                        <li><a href="servicios.html">Desarrollo de sitios web</a></li>
-                        <li><a href="servicios.html">Diseño de marca</a></li>
-                        <li><a href="servicios.html">Marketing digital</a></li>
-                    </ul>
-                </div>
 
-                <div class="container list">
-                    <ul>
-                        <h4 class="color__03">Punto apps </h4>
-                        <br>
-                        <li><a href="nosotros.html">Nosotros</a> </li>
-                        <li><a href="contacto.html">Escríbenos</a></li>
-                        <li><a href="coming_soon.html">Soporte</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                    </ul>
-                </div>
-
-                <div class="container list">
-                    <ul>
-                        <h4 class="color__03">Legal </h4>
-                        <br>
-                        <li><a href="coming_soon.html">Equipo</a> </li>
-                        <li><a href="coming_soon.html">Planes</a></li>
-                        <li><a href="coming_soon.html">Términos y condiciones</a></li>
-                        <li><a href="coming_soon.html">Política de privacidad</a></li>
-                    </ul>
-                </div>
-
-                <div class="social">
-                    <div class="container">
-                        <h5>Síguenos en redes sociales</h5>
-                        <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-tiktok"></i></a>
-                        <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram-square"></i></a>
-                    </div>
-                    <div class="container">
-                        <p>Todos los derechos reservados | Punto Apps 2022™</p>
-                    </div>
-                </div>
-            </div>
-
-        </footer>
-        <!-- Footer ends -->
     </main>
 
+
+    <!-- Footer starts -->
+    <footer class="black">
+        <div class="container__footer">
+            <div class="container list">
+                <ul>
+                    <h4 class="color__03">Servicios</h4>
+                    <br>
+                    <li><a href="servicios.html">Desarrollo de aplicaciones</a> </li>
+                    <li><a href="servicios.html">Desarrollo de sitios web</a></li>
+                    <li><a href="servicios.html">Diseño de marca</a></li>
+                    <li><a href="servicios.html">Marketing digital</a></li>
+                </ul>
+            </div>
+
+            <div class="container list">
+                <ul>
+                    <h4 class="color__03">Punto apps </h4>
+                    <br>
+                    <li><a href="nosotros.html">Nosotros</a> </li>
+                    <li><a href="contacto.html">Escríbenos</a></li>
+                    <li><a href="coming_soon.html">Soporte</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                </ul>
+            </div>
+
+            <div class="container list">
+                <ul>
+                    <h4 class="color__03">Legal </h4>
+                    <br>
+                    <li><a href="coming_soon.html">Equipo</a> </li>
+                    <li><a href="coming_soon.html">Planes</a></li>
+                    <li><a href="coming_soon.html">Términos y condiciones</a></li>
+                    <li><a href="coming_soon.html">Política de privacidad</a></li>
+                </ul>
+            </div>
+
+            <div class="social">
+                <div class="container">
+                    <h5>Síguenos en redes sociales</h5>
+                    <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-tiktok"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram-square"></i></a>
+                </div>
+                <div class="container">
+                    <p>Todos los derechos reservados | Punto Apps 2022™</p>
+                </div>
+            </div>
+        </div>
+
+    </footer>
+    <!-- Footer ends -->
 
 </body>
 
