--- a/contacto.html
+++ b/contacto.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet" />
     <!-- Fontawesome íconos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+
     <script src="main.js"></script>
 </head>
 
@@ -32,16 +34,14 @@
                     <li><a href="https://wa.link/vcthey" target="_blank" rel="noopener noreferrer"><button class="btn-1">¿Tienes un proyecto?</button></a></li>
                 </ul>
 
-                <i class="fa-solid fa-bars fa-xl color__04 bars"></i>
 
 
             </nav>
             <!-- Menú navegación ends -->
         </header>
-
-        <div class="container">
-            <div class="contacto">
-                <div class="datos">
+        <div class="container ">
+            <div class="contacto ">
+                <div class="datos animate__animated animate__fadeInLeft animate__slow">
                     <p>Si tienes dudas o preguntas</p>
                     <h1>Contáctanos ahora</h1>
                     <h4> <i class="fa-solid fa-earth-americas"></i> Bogotá, Colombia</h4>
@@ -51,7 +51,7 @@
                 </div>
 
                 <!-- Formulario starts -->
-                <div class="form">
+                <div class="form animate__animated animate__fadeInRight animate__slow">
                     <h2>¿Deseas que te contactemos?</h2>
                     <p>Completa la siguiente infoprmación para que nuestro equipo te contacte</p>
                     <form action="/action_page.php">
@@ -343,7 +343,7 @@
             </div>
 
             <!-- mapa google starts -->
-            <div>
+            <div class="animate__animated animate__fadeInUp animate__slow">
                 <iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/wearable-gps/">Kids wearables</a></iframe>
             </div>
             <!-- mapa google ends -->
