--- a/nosotros.html
+++ b/nosotros.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet" />
     <!-- Fontawesome íconos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+
     <script src="main.js"></script>
 </head>
 
@@ -32,7 +34,6 @@
                     <li><a href="https://wa.link/vcthey" target="_blank" rel="noopener noreferrer"><button class="btn-1">¿Tienes un proyecto?</button></a></li>
                 </ul>
 
-                <i class="fa-solid fa-bars fa-xl color__04 bars"></i>
 
 
             </nav>
@@ -44,81 +45,76 @@
         <!-- Botón Whastapp ends -->
 
         <div class="container">
-            <div class="leads">
+            <div class="leads ">
                 <div>
-                    <h1 class="lead-1">Somos Punto App</h1>
-                    <h2 class="lead-2">donde la ideas cobran vida</h2>
-                    <p>
+                    <h1 class="lead-1 animate__animated animate__fadeInLeft animate__slow">Somos Punto App</h1>
+                    <h2 class="lead-2 animate__animated animate__fadeInLeft animate__slow">donde la ideas cobran vida</h2>
+                    <p class="animate__animated animate__fadeInLeft animate__slow">
                         Somos Punto apps
                         Nos especializamos en construir sueños, ideas y llevarlas al punto ideal del éxito organziacional. Con más de 10 años de experiencia en el mercado, y con un equipo de excelentes profesionales, somos tu aliado ideal para desarrollo de software e innovación.
                         En nosotros encontrarás ese resplado de calidad, confianza e innovación, te invitamos a agendar una cita con nosotros.
                     </p>
                 </div>
 
-                <div class="us">
-                    <img src="img/nosotros/01.png" alt="">
+                <div class="us animate__animated animate__fadeInDown animate__slow">
+                    <img id="img-us" src="img/nosotros/01.png" alt="">
                 </div>
             </div>
+        </div>
+    </main>
 
+    <!-- Footer starts -->
+    <footer class="black">
+        <div class="container__footer">
+            <div class="container list">
+                <ul>
+                    <h4 class="color__03">Servicios</h4>
+                    <br>
+                    <li><a href="servicios.html">Desarrollo de aplicaciones</a> </li>
+                    <li><a href="servicios.html">Desarrollo de sitios web</a></li>
+                    <li><a href="servicios.html">Diseño de marca</a></li>
+                    <li><a href="servicios.html">Marketing digital</a></li>
+                </ul>
+            </div>
 
+            <div class="container list">
+                <ul>
+                    <h4 class="color__03">Punto apps </h4>
+                    <br>
+                    <li><a href="nosotros.html">Nosotros</a> </li>
+                    <li><a href="contacto.html">Escríbenos</a></li>
+                    <li><a href="coming_soon.html">Soporte</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                </ul>
+            </div>
 
+            <div class="container list">
+                <ul>
+                    <h4 class="color__03">Legal </h4>
+                    <br>
+                    <li><a href="coming_soon.html">Equipo</a> </li>
+                    <li><a href="coming_soon.html">Planes</a></li>
+                    <li><a href="coming_soon.html">Términos y condiciones</a></li>
+                    <li><a href="coming_soon.html">Política de privacidad</a></li>
+                </ul>
+            </div>
+
+            <div class="social">
+                <div class="container">
+                    <h5>Síguenos en redes sociales</h5>
+                    <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-tiktok"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram-square"></i></a>
+                </div>
+                <div class="container">
+                    <p>Todos los derechos reservados | Punto Apps 2022™</p>
+                </div>
+            </div>
         </div>
 
-
-
-        <!-- Footer starts -->
-        <footer class="black">
-            <div class="container__footer">
-                <div class="container list">
-                    <ul>
-                        <h4 class="color__03">Servicios</h4>
-                        <br>
-                        <li><a href="servicios.html">Desarrollo de aplicaciones</a> </li>
-                        <li><a href="servicios.html">Desarrollo de sitios web</a></li>
-                        <li><a href="servicios.html">Diseño de marca</a></li>
-                        <li><a href="servicios.html">Marketing digital</a></li>
-                    </ul>
-                </div>
-
-                <div class="container list">
-                    <ul>
-                        <h4 class="color__03">Punto apps </h4>
-                        <br>
-                        <li><a href="nosotros.html">Nosotros</a> </li>
-                        <li><a href="contacto.html">Escríbenos</a></li>
-                        <li><a href="coming_soon.html">Soporte</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                    </ul>
-                </div>
-
-                <div class="container list">
-                    <ul>
-                        <h4 class="color__03">Legal </h4>
-                        <br>
-                        <li><a href="coming_soon.html">Equipo</a> </li>
-                        <li><a href="coming_soon.html">Planes</a></li>
-                        <li><a href="coming_soon.html">Términos y condiciones</a></li>
-                        <li><a href="coming_soon.html">Política de privacidad</a></li>
-                    </ul>
-                </div>
-
-                <div class="social">
-                    <div class="container">
-                        <h5>Síguenos en redes sociales</h5>
-                        <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-tiktok"></i></a>
-                        <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram-square"></i></a>
-                    </div>
-                    <div class="container">
-                        <p>Todos los derechos reservados | Punto Apps 2022™</p>
-                    </div>
-                </div>
-            </div>
-
-        </footer>
-        <!-- Footer ends -->
-    </main>
+    </footer>
+    <!-- Footer ends -->
 
 
 </body>
