--- a/servicios.html
+++ b/servicios.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet" />
     <!-- Fontawesome íconos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+
     <script src="main.js"></script>
 </head>
 
@@ -32,7 +34,6 @@
                     <li><a href="https://wa.link/vcthey" target="_blank" rel="noopener noreferrer"><button class="btn-1">¿Tienes un proyecto?</button></a></li>
                 </ul>
 
-                <i class="fa-solid fa-bars fa-xl color__04 bars"></i>
 
 
             </nav>
@@ -44,13 +45,13 @@
         <!-- Botón Whastapp ends -->
 
         <div class="container">
-            <div class="services_titles">
+            <div class="services_titles animate__animated animate__fadeInDown animate__slow">
                 <p>Servicios de alta calidad </p>
                 <h3>ideales para tu organización</h3>
             </div>
-            <div class="service__description">
+            <div class="service__description ">
 
-                <div class="service_description-items blue">
+                <div class="service_description-items blue animate__animated animate__fadeInLeft animate__slow">
                     <h3>Desarrollo de Aplicaciones</h3>
                     <p>Desarrollo de productos digitales a tu medida y necesidad</p>
                     <small>Desde</small>
@@ -64,7 +65,7 @@
                     <button class="btn-2">¡Quiero este servicio!</button>
                 </div>
 
-                <div class="service_description-items blue">
+                <div class="service_description-items blue animate__animated animate__fadeInLeft animate__slow">
                     <h3>Desarrollo de Sitios Web</h3>
                     <p>Desarrollo de productos digitales a tu medida y necesidad</p>
                     <small>Desde</small>
@@ -78,7 +79,7 @@
                     <button class="btn-2">¡Quiero este servicio!</button>
                 </div>
 
-                <div class="service_description-items blue">
+                <div class="service_description-items blue animate__animated animate__fadeInRight animate__slow">
                     <h3>Diseño de Marca</h3>
                     <p>Desarrollo de productos digitales a tu medida y necesidad</p>
                     <small>Desde</small>
@@ -92,7 +93,7 @@
                     <button class="btn-2">¡Quiero este servicio!</button>
                 </div>
 
-                <div class="service_description-items blue">
+                <div class="service_description-items blue animate__animated animate__fadeInRight animate__slow">
                     <h3>Marketing Digital</h3>
                     <p>Desarrollo de productos digitales a tu medida y necesidad</p>
                     <small>Desde</small>
@@ -108,62 +109,61 @@
             </div>
 
         </div>
+    </main>
 
 
-
-        <!-- Footer starts -->
-        <footer class="black">
-            <div class="container__footer">
-                <div class="container list">
-                    <ul>
-                        <h4 class="color__03">Servicios</h4>
-                        <br>
-                        <li><a href="servicios.html">Desarrollo de aplicaciones</a> </li>
-                        <li><a href="servicios.html">Desarrollo de sitios web</a></li>
-                        <li><a href="servicios.html">Diseño de marca</a></li>
-                        <li><a href="servicios.html">Marketing digital</a></li>
-                    </ul>
-                </div>
-
-                <div class="container list">
-                    <ul>
-                        <h4 class="color__03">Punto apps </h4>
-                        <br>
-                        <li><a href="nosotros.html">Nosotros</a> </li>
-                        <li><a href="contacto.html">Escríbenos</a></li>
-                        <li><a href="coming_soon.html">Soporte</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                    </ul>
-                </div>
-
-                <div class="container list">
-                    <ul>
-                        <h4 class="color__03">Legal </h4>
-                        <br>
-                        <li><a href="coming_soon.html">Equipo</a> </li>
-                        <li><a href="coming_soon.html">Planes</a></li>
-                        <li><a href="coming_soon.html">Términos y condiciones</a></li>
-                        <li><a href="coming_soon.html">Política de privacidad</a></li>
-                    </ul>
-                </div>
-
-                <div class="social">
-                    <div class="container">
-                        <h5>Síguenos en redes sociales</h5>
-                        <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-tiktok"></i></a>
-                        <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram-square"></i></a>
-                    </div>
-                    <div class="container">
-                        <p>Todos los derechos reservados | Punto Apps 2022™</p>
-                    </div>
-                </div>
+    <!-- Footer starts -->
+    <footer class="black">
+        <div class="container__footer">
+            <div class="container list">
+                <ul>
+                    <h4 class="color__03">Servicios</h4>
+                    <br>
+                    <li><a href="servicios.html">Desarrollo de aplicaciones</a> </li>
+                    <li><a href="servicios.html">Desarrollo de sitios web</a></li>
+                    <li><a href="servicios.html">Diseño de marca</a></li>
+                    <li><a href="servicios.html">Marketing digital</a></li>
+                </ul>
             </div>
 
-        </footer>
-        <!-- Footer ends -->
-    </main>
+            <div class="container list">
+                <ul>
+                    <h4 class="color__03">Punto apps </h4>
+                    <br>
+                    <li><a href="nosotros.html">Nosotros</a> </li>
+                    <li><a href="contacto.html">Escríbenos</a></li>
+                    <li><a href="coming_soon.html">Soporte</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                </ul>
+            </div>
+
+            <div class="container list">
+                <ul>
+                    <h4 class="color__03">Legal </h4>
+                    <br>
+                    <li><a href="coming_soon.html">Equipo</a> </li>
+                    <li><a href="coming_soon.html">Planes</a></li>
+                    <li><a href="coming_soon.html">Términos y condiciones</a></li>
+                    <li><a href="coming_soon.html">Política de privacidad</a></li>
+                </ul>
+            </div>
+
+            <div class="social">
+                <div class="container">
+                    <h5>Síguenos en redes sociales</h5>
+                    <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.tiktok.com/es/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-tiktok"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram-square"></i></a>
+                </div>
+                <div class="container">
+                    <p>Todos los derechos reservados | Punto Apps 2022™</p>
+                </div>
+            </div>
+        </div>
+
+    </footer>
+    <!-- Footer ends -->
 
 
 </body>
